@@ -16,6 +16,9 @@
    - stevesk@cvs.openbsd.org 2002/07/21 18:34:43
      [auth-options.h]
      remove invalid comment
+   - markus@cvs.openbsd.org 2002/07/22 11:03:06
+     [session.c]
+     fallback to _PATH_STDPATH on setusercontext+LOGIN_SETPATH errors;
  
 20020722
  - (bal) AIX tty data limiting patch fix by leigh@solinno.co.uk
@@ -1439,4 +1442,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2399 2002/07/23 21:07:45 mouring Exp $
+$Id: ChangeLog,v 1.2400 2002/07/23 21:11:09 mouring Exp $
